--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-13 14:28:31 -0500 
+%% Created for Evan Bollig at 2013-10-15 16:49:36 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Shi2012,
+	Address = {Los Alamitos, CA, USA},
+	Author = {Justin Y. Shi and Moussa Taifi and Aakash Pradeep and Abdallah Khreishah and Vivek Antony},
+	Date-Added = {2013-10-15 21:49:26 +0000},
+	Date-Modified = {2013-10-15 21:49:29 +0000},
+	Doi = {http://doi.ieeecomputersociety.org/10.1109/SC.Companion.2012.147},
+	Isbn = {978-1-4673-3049-7},
+	Journal = {High Performance Computing, Networking Storage and Analysis, SC Companion:},
+	Pages = {1215-1225},
+	Publisher = {IEEE Computer Society},
+	Title = {Program Scalability Analysis for HPC Cloud: Applying Amdahl's Law to NAS Benchmarks},
+	Volume = {0},
+	Year = {2012},
+	Bdsk-Url-1 = {http://doi.ieeecomputersociety.org/10.1109/SC.Companion.2012.147}}
 
 @misc{ItascaTuning,
 	Author = {David Porter},
